[tool.poetry]
name = "experts"
version = "0.0.0"
description = "Integration applications for Experts@Minnesota"
authors = ["David Naughton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
addict = "^2.4.0"
attrs = "^19.3.0"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
requests = "^2.20.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-forked = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
