[tool.poetry]
name = "experts"
version = "0.0.0"
description = "Integration applications for Experts@Minnesota"
authors = ["David Naughton","John Barneson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
addict = "^2.4.0"
attrs = "^23.1.0"
oracledb = "^1.3.2"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
immutable = {url = "https://github.com/UMNLibraries/immutable-python/raw/main/dist/immutable-0.1.0.tar.gz"}
requests = "^2.20.0"
tenacity = "^8.2.0"
returns = "^0.22.0"
pyrsistent = "^0.19.3"
dataclasses-json = "^0.6.1"
toolz = "^0.12.0"
httpx = "^0.25.0"
pipe = "^2.1"
jsonpath-ng = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-forked = "^1.4.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
