[tool.poetry]
name = "experts"
version = "0.0.0"
description = "Integration applications for Experts@Minnesota"
authors = ["David Naughton","John Barneson"]
license = "MIT"
packages = [{include = "experts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
addict = "^2.4.0"
attrs = "^25.3.0"
oracledb = "^1.3.2"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
immutable = {url = "https://github.com/UMNLibraries/immutable-python/raw/main/dist/immutable-0.1.0.tar.gz"}
pycific = {url = "https://github.com/UMNLibraries/pycific/raw/main/dist/pycific-0.4.0.tar.gz"}
experts_dw = {url = "https://github.com/UMNLibraries/experts_dw/raw/main/dist/experts_dw-10.9.0.tar.gz"}
requests = "^2.20.0"
tenacity = "^8.2.0"
returns = ">=0.26.0,<0.27.0"
pyrsistent = ">=0.20.0,<0.21.0"
pydantic = ">=2.11.7,<3.0.0"
dataclasses-json = "^0.6.1"
toolz = "^0.12.0"
httpx = "^0.25.0"
pipe = "^2.1"
jsonpath-ng = "^1.6.1"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-forked = "^1.4.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
